Upgraded to WildFly 9.0.1.Final